[package]
name = "ray_tracing_vulkano"
version = "0.1.0"
authors = ["maslabgamer <maslabgamer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.18.0"
vulkano = "0.20.0"
vulkano-shaders = "0.20.0"
vulkano-win = "0.20.0"
device_query = "0.2.7"
winit = "0.24.0"

[profile.dev]
opt-level = 3
